--- a/BreakPoint/View/Base.lproj/Main.storyboard
+++ b/BreakPoint/View/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                     <constraint firstAttribute="trailing" secondItem="5QH-nT-knh" secondAttribute="trailing" constant="20" id="Wuc-b7-1ie"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VQh-b2-B7m">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VQh-b2-B7m">
                                 <rect key="frame" x="0.0" y="100" width="375" height="629"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -72,17 +72,17 @@
                                                         <constraint firstAttribute="height" constant="50" id="UxC-kd-XSw"/>
                                                     </constraints>
                                                 </imageView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="QY2-K5-6Ia">
-                                                    <rect key="frame" x="68" y="17.999999999999996" width="375" height="63.666666666666657"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="sro-p7-Xuq">
+                                                    <rect key="frame" x="66" y="20" width="375" height="71.666666666666671"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="user@breakpoint.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CxS-a8-qcN">
-                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="22"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="27.666666666666668"/>
                                                             <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="15"/>
                                                             <color key="textColor" red="0.17254901959999999" green="0.83137254900000002" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="Dqw-AX-KHg">
-                                                            <rect key="frame" x="0.0" y="32" width="375" height="31.666666666666671"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dqw-AX-KHg">
+                                                            <rect key="frame" x="0.0" y="32.666666666666664" width="375" height="38.999999999999993"/>
                                                             <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="20"/>
                                                             <color key="textColor" red="0.17254901959999999" green="0.83137254900000002" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -92,11 +92,11 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="2Qf-AW-6s0" firstAttribute="leading" secondItem="t5l-UW-Vnj" secondAttribute="leadingMargin" id="9AS-mP-6df"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="QY2-K5-6Ia" secondAttribute="bottom" constant="10" id="bPu-xp-jTf"/>
+                                                <constraint firstItem="sro-p7-Xuq" firstAttribute="leading" secondItem="2Qf-AW-6s0" secondAttribute="trailing" constant="8" id="NVP-41-9Fd"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="sro-p7-Xuq" secondAttribute="trailing" id="NjY-Ln-heY"/>
+                                                <constraint firstItem="sro-p7-Xuq" firstAttribute="top" secondItem="t5l-UW-Vnj" secondAttribute="topMargin" constant="12" id="PaA-IB-0Er"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="sro-p7-Xuq" secondAttribute="bottom" id="dU7-Rx-VFO"/>
                                                 <constraint firstItem="2Qf-AW-6s0" firstAttribute="top" secondItem="t5l-UW-Vnj" secondAttribute="topMargin" id="fiK-PU-DQI"/>
-                                                <constraint firstItem="QY2-K5-6Ia" firstAttribute="leading" secondItem="2Qf-AW-6s0" secondAttribute="trailing" constant="10" id="oLV-cx-YV6"/>
-                                                <constraint firstItem="QY2-K5-6Ia" firstAttribute="top" secondItem="t5l-UW-Vnj" secondAttribute="topMargin" constant="10" id="pbl-Ur-fcE"/>
-                                                <constraint firstAttribute="trailing" secondItem="QY2-K5-6Ia" secondAttribute="trailing" constant="10" id="xJc-HR-VnT"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
