--- a/BreakPoint/View/Base.lproj/Main.storyboard
+++ b/BreakPoint/View/Base.lproj/Main.storyboard
@@ -740,7 +740,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_new group" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HF1-IO-K8T">
-                                        <rect key="frame" x="134" y="64.666666666666671" width="108.66666666666669" height="21"/>
+                                        <rect key="frame" x="133.33333333333334" y="64.666666666666671" width="108.66666666666666" height="21"/>
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
                                         <color key="textColor" red="0.606446445" green="0.81774991750000003" blue="0.3750501275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -814,7 +814,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="invite people" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gw3-ds-mC2">
                                         <rect key="frame" x="0.0" y="140" width="355" height="20"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="55V-82-hL3"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="55V-82-hL3"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
                                         <color key="textColor" red="0.56078431370000004" green="0.81176470590000005" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
