--- a/BreakPoint/View/Base.lproj/Main.storyboard
+++ b/BreakPoint/View/Base.lproj/Main.storyboard
@@ -730,7 +730,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pAb-hD-s3c">
-                                        <rect key="frame" x="306" y="60" width="49" height="30"/>
+                                        <rect key="frame" x="375" y="60" width="49" height="30"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="16"/>
                                         <state key="normal" title="DONE">
                                             <color key="titleColor" red="0.56078431370000004" green="0.81176470590000005" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -740,7 +740,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_new group" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HF1-IO-K8T">
-                                        <rect key="frame" x="133.33333333333334" y="64.666666666666671" width="108.66666666666666" height="21"/>
+                                        <rect key="frame" x="187.66666666666666" y="64.666666666666671" width="108.66666666666666" height="21"/>
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
                                         <color key="textColor" red="0.606446445" green="0.81774991750000003" blue="0.3750501275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -770,20 +770,17 @@
                                     <constraint firstItem="oZH-FT-Gc8" firstAttribute="leading" secondItem="UG1-N1-Ipt" secondAttribute="leading" constant="20" id="wLn-kE-S6Y"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="C6x-4O-ZvN">
-                                <rect key="frame" x="10" y="110" width="355" height="210"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="C6x-4O-ZvN">
+                                <rect key="frame" x="10" y="110" width="375" height="229"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VGK-B8-Uij">
-                                        <rect key="frame" x="0.0" y="0.0" width="355" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="gPV-W6-yL2"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="33"/>
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
                                         <color key="textColor" red="0.56078431370000004" green="0.81176470590000005" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="enter title..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IqL-1h-F2p" customClass="InsetTextField" customModule="BreakPoint" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="30" width="355" height="30"/>
+                                        <rect key="frame" x="0.0" y="38" width="375" height="30"/>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="tfd-lA-pBK"/>
@@ -793,16 +790,13 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tKm-Q2-nFC">
-                                        <rect key="frame" x="0.0" y="70" width="355" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="HSX-VC-6zP"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="73" width="375" height="33.333333333333343"/>
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
                                         <color key="textColor" red="0.56078431370000004" green="0.81176470590000005" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="enter description..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="poM-g1-9YD" customClass="InsetTextField" customModule="BreakPoint" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="100" width="355" height="30"/>
+                                        <rect key="frame" x="0.0" y="111.33333333333334" width="375" height="30"/>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="zb8-V8-IuP"/>
@@ -811,17 +805,14 @@
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="16"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="invite people" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gw3-ds-mC2">
-                                        <rect key="frame" x="0.0" y="140" width="355" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="55V-82-hL3"/>
-                                        </constraints>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="invite people" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gw3-ds-mC2">
+                                        <rect key="frame" x="0.0" y="146.33333333333331" width="375" height="37.666666666666657"/>
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
                                         <color key="textColor" red="0.56078431370000004" green="0.81176470590000005" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="enter emails..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ouK-cC-pCx" customClass="InsetTextField" customModule="BreakPoint" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="170" width="355" height="40"/>
+                                        <rect key="frame" x="0.0" y="189" width="375" height="40"/>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="78V-MH-lbh"/>
@@ -833,14 +824,14 @@
                                 </subviews>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q5B-gA-0hy">
-                                <rect key="frame" x="10" y="328" width="355" height="450"/>
+                                <rect key="frame" x="10" y="347" width="375" height="431"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="60" id="trB-n7-pru" customClass="UserCell" customModule="BreakPoint" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="355" height="60"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="trB-n7-pru" id="gbM-Vz-UMN">
-                                            <rect key="frame" x="0.0" y="0.0" width="355" height="60"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="f50-w2-Bs3">
@@ -851,13 +842,13 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="user@breakpoint.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="vma-06-rUd">
-                                                    <rect key="frame" x="70" y="20" width="249" height="21"/>
+                                                    <rect key="frame" x="70" y="20" width="269" height="21"/>
                                                     <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
                                                     <color key="textColor" red="0.56078431370000004" green="0.81176470590000005" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="whiteCheckmark" translatesAutoresizingMaskIntoConstraints="NO" id="PRW-mc-GmH">
-                                                    <rect key="frame" x="327" y="20" width="20" height="20"/>
+                                                    <rect key="frame" x="347" y="20" width="20" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="657-o9-iEx"/>
                                                         <constraint firstAttribute="width" constant="20" id="RnT-9d-B1G"/>
@@ -890,11 +881,11 @@
                             <constraint firstItem="0bE-BB-2PL" firstAttribute="trailing" secondItem="q5B-gA-0hy" secondAttribute="trailing" constant="10" id="3Gl-bb-RXQ"/>
                             <constraint firstItem="UG1-N1-Ipt" firstAttribute="trailing" secondItem="0bE-BB-2PL" secondAttribute="trailing" id="3kV-Ub-1z6"/>
                             <constraint firstItem="0bE-BB-2PL" firstAttribute="bottom" secondItem="q5B-gA-0hy" secondAttribute="bottom" id="40Z-d1-Y2M"/>
-                            <constraint firstItem="q5B-gA-0hy" firstAttribute="top" secondItem="C6x-4O-ZvN" secondAttribute="bottom" constant="8" id="7y3-ud-KDO"/>
                             <constraint firstItem="C6x-4O-ZvN" firstAttribute="leading" secondItem="0bE-BB-2PL" secondAttribute="leading" constant="10" id="9QY-Rz-aGh"/>
                             <constraint firstItem="UG1-N1-Ipt" firstAttribute="leading" secondItem="0bE-BB-2PL" secondAttribute="leading" id="Uc1-f6-vbU"/>
                             <constraint firstItem="q5B-gA-0hy" firstAttribute="leading" secondItem="0bE-BB-2PL" secondAttribute="leading" constant="10" id="W6O-G0-10l"/>
                             <constraint firstItem="0bE-BB-2PL" firstAttribute="trailing" secondItem="C6x-4O-ZvN" secondAttribute="trailing" constant="10" id="aQh-Ud-aLa"/>
+                            <constraint firstItem="q5B-gA-0hy" firstAttribute="top" secondItem="C6x-4O-ZvN" secondAttribute="bottom" constant="8" id="mHP-zg-FXS"/>
                             <constraint firstItem="UG1-N1-Ipt" firstAttribute="top" secondItem="vNW-JQ-air" secondAttribute="top" id="wyC-h7-DgW"/>
                             <constraint firstItem="C6x-4O-ZvN" firstAttribute="top" secondItem="UG1-N1-Ipt" secondAttribute="bottom" constant="10" id="zbK-dT-9C7"/>
                         </constraints>
@@ -911,7 +902,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XvB-fd-Fkz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1401" y="360"/>
+            <point key="canvasLocation" x="1400.8" y="359.85221674876851"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
